# outscraper-mcp

./: CLAUDE.md  Dockerfile  LICENSE  README.md  deployment.md  env.sample  example_usage.py  pyproject.toml  requirements.txt  run_outscraper_mcp.sh  smithery.yaml  test_complete_implementation.py  test_http_server.py  test_outscraper.py  todo.md
.github/workflows/: publish.yml
docs/: exa-mcp-server.txt  jlowin-fastmcp.txt  modelcontextprotocol-python-sdk.txt  outscraper_python.txt
outscraper_mcp/: server.py  server_http.py
tests/: test_server.py
