[project]
name = "outscraper-mcp"
version = "1.0.0"
description = "MCP server for Outscraper Google Maps data extraction services"
authors = [
    {name = "Jay Ozer", email = "jay@example.com"}
]
readme = "README.md"
license = {text = "Experimental Software License"}
requires-python = ">=3.10"
keywords = ["mcp", "outscraper", "google-maps", "reviews", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jayozer/outscraper-mcp"
Repository = "https://github.com/jayozer/outscraper-mcp.git"
Issues = "https://github.com/jayozer/outscraper-mcp/issues"
Documentation = "https://github.com/jayozer/outscraper-mcp#readme"

[project.scripts]
outscraper-mcp = "outscraper_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outscraper_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 