[project]
name = "outscraper-mcp"
version = "1.0.0"
description = "Streamlined MCP server for Outscraper's Google Maps data extraction services"
authors = [
    {name = "Jay Ozer", email = "jay.ozer@dataacrobat.com"}
]
readme = "README.md"
license = {text = "Experimental Software License"}
requires-python = ">=3.10"
keywords = ["mcp", "outscraper", "google-maps", "reviews", "search", "data-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.8.0",
    "requests>=2.25.0",
    "urllib3>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/jayozer/outscraper-mcp"
Repository = "https://github.com/jayozer/outscraper-mcp.git"
Issues = "https://github.com/jayozer/outscraper-mcp/issues"

[project.scripts]
outscraper-mcp = "outscraper_mcp.__init__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["outscraper_mcp*"]

[tool.setuptools.package-data]
outscraper_mcp = ["*.py"]
